tests/compile_fail/handle_scope_lifetime_3.stderr
error[E0499]: cannot borrow `scope1` as mutable more than once at a time
 --> $DIR/handle_scope_lifetime_3.rs:8:22
  |
7 |     let mut _scope2 = v8::EscapableHandleScope::new(&mut scope1);
  |                                                     ----------- first mutable borrow occurs here
8 |     v8::Integer::new(&mut scope1, 123)
  |                      ^^^^^^^^^^^ second mutable borrow occurs here
9 |   };
  |   - first borrow might be used here, when `_scope2` is dropped and runs the `Drop` code for type `EscapableHandleScope`
